--- a/Week3/index.html
+++ b/Week3/index.html
@@ -37,31 +37,31 @@
             </article>
             <article>
             	<div id="overlay">
-                	Berries<br />
+                	Flower Buds<br />
                     Elizabeth Park
                 </div>
-            	<img src="4.jpg" height="200px" width="200px" />
+            	<img src="pink.png" height="200px" width="200px" />
             </article>
             <article>
             	<div id="overlay">
-                	Swing Pattern<br />
+                	Purple<br />
                     Elizabeth Park
                 </div>
-            	<img src="3.jpg" height="200px" width="200px" />
+            	<img src="purple.png" height="200px" width="200px" />
             </article>
             <article>
             	<div id="overlay">
-                	Berries<br />
+                	Flower Buds<br />
                     Elizabeth Park
                 </div>
-            	<img src="4.jpg" height="200px" width="200px" />
+            	<img src="pink.png" height="200px" width="200px" />
             </article>
               <article>
             	<div id="overlay">
-                	Swing Pattern<br />
+                	Purple<br />
                     Elizabeth Park
                 </div>
-            	<img src="3.jpg" height="200px" width="200px" />
+            	<img src="purple.png" height="200px" width="200px" />
             </article>
             <article>
             	<div id="overlay">
@@ -100,17 +100,17 @@
             </article>
             <article>
             	<div id="overlay">
-                	Swing Pattern<br />
+                	Purple<br />
                     Elizabeth Park
                 </div>
-            	<img src="3.jpg" height="200px" width="200px" />
+            	<img src="purple.png" height="200px" width="200px" />
             </article>
             <article>
             	<div id="overlay">
-                	Berries<br />
+                	Flower Buds<br />
                     Elizabeth Park
                 </div>
-            	<img src="4.jpg" height="200px" width="200px" />
+            	<img src="pink.png" height="200px" width="200px" />
             </article>
              
             <article>
